Bug 108787 -- unable to type in Open Web Location dialog when it first appears.  r=saari, sr=blizzard.